# rust-role-based-auth

./: .gitignore  Cargo.toml  README.md  frontend.html
src/: auth.rs  auth_db.rs  lib.rs  main.rs
