[package]
name = "authorization"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Password hashing
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }

# CORS / HTTP utilities
tower-http = { version = "0.5", features = ["cors"] }

